--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
     <!-- ÚVODNÝ OBRÁZOK - hero sekcia s nadpisom a textom -->
     <section class="hero">
         <div class="hero-content">
-            <h1></h1>
+            <h1>Japonsko</h1>
             <p></p>
         </div>
     </section>
 
     <!-- CITÁT - centrovaný, v kurzíve -->
     <section class="quote">
-        <p>""</p>
-        <p class="author"></p>
+        <p>"there is nothing outside of yourself that can ever enable you to get better, stronger, richer, quicker, or smarter. Everything is within. Everything exists. Seek nothing outside of yourself."</p>
+        <p class="author">Miyamoto Musashi</p>
     </section>
 
     <!-- OBSAH - dva divy s textom -->
